web2py from Git and fix nginx template

--- a/code/roles/nginx/tasks/main.yml
+++ b/code/roles/nginx/tasks/main.yml
@@ -39,6 +39,10 @@
             dest={{ snippets }}
   when: letsencrypt == True
 
+- name: Disable default Virtualhost
+  file: path=/etc/nginx/sites-enabled/default
+        state=absent
+
 - name: Enable footy
   file: src=/etc/nginx/sites-available/footy.conf
         dest=/etc/nginx/sites-enabled/footy.conf
