New ubuntu box, w2pfooty, refactor

--- a/code/roles/base/tasks/main.yml
+++ b/code/roles/base/tasks/main.yml
@@ -8,4 +8,7 @@
     - python-apt
     - python-dev
     - python-openssl
+    - python-virtualenv
     - python-setuptools
+    - unzip
+    - sqlite
