--- a/code/roles/nginx/templates/footy.conf
+++ b/code/roles/nginx/templates/footy.conf
@@ -1,6 +1,5 @@
 server {
     listen 80 default_server;
-    listen [::]:80 default_server ipv6only=on;
     server_name {{ domain_name }};
     {% if letsencrypt == True %}
     include {{ snippets }}/letsencrypt.conf;
@@ -13,10 +12,9 @@ server {
 server {
     server_name {{ domain_name }};
     listen 443 ssl http2 default_server;
-    listen [::]:443 ssl http2 default_server ipv6only=on;
     client_max_body_size 5M;
 
-    access_log {{ log_folder }}/{{ app }}/access_log combined;
+    access_log {{ log_folder }}/{{ app }}/access_log compression;
     error_log {{ log_folder }}/{{ app }}/error_log;
 
     ssl_certificate {{ cert_path }}/{{ domain_name }}/fullchain.pem;
