--- a/code/roles/nginx/tasks/main.yml
+++ b/code/roles/nginx/tasks/main.yml
@@ -1,5 +1,14 @@
 ---
-- name: Install software
+- name: Add servername in /etc/hosts
+  lineinfile: dest=/etc/hosts
+              regexp='^127\.0\.0\.1'
+              line="127.0.0.1 {{ domain_name }}"
+              owner=root
+              group=root
+              mode=0644
+  when: ('vagrant' in domain_name)
+
+- name: Install Nginx
   apt: name=nginx
        update_cache=yes
 
@@ -10,7 +19,7 @@
     - { name: nginx.conf, dest: /etc/nginx }
     - { name: footy.conf, dest: /etc/nginx/sites-available }
 
-- name: Copy SSL configuration files
+- name: Copy SSL configuration file
   copy: src=ssl.conf
         dest={{ snippets }}
 
