--- a/code/roles/nginx/templates/nginx.conf
+++ b/code/roles/nginx/templates/nginx.conf
@@ -7,6 +7,10 @@ events {
 }
 
 http {
+
+    log_format compression '$remote_addr - $remote_user [$time_local] '
+                           '"$request" "$request_time" $status $bytes_sent '
+                           '"$http_referer" "$http_user_agent" "$gzip_ratio"';
     sendfile on;
     tcp_nopush on;
     tcp_nodelay on;
