--- a/code/roles/virtualenv/tasks/main.yml
+++ b/code/roles/virtualenv/tasks/main.yml
@@ -1,14 +1,7 @@
 ---
-- name: Install pip
-  easy_install: name=pip
-                virtualenv={{ web2py_dir }}_env
-
-- name: Install virtualenv
-  pip: name=virtualenv
-
 - name: Install footy module
   pip: name=footylib
-       state=latest
+       version={{ version }}
        virtualenv={{ web2py_dir }}_env
 
 - name: Fix virtualenv permissions
@@ -17,3 +10,4 @@
         group={{ owner }}
         state=directory
         recurse=yes
+ 
