--- a/code/roles/supervisor/handlers/main.yml
+++ b/code/roles/supervisor/handlers/main.yml
@@ -1,5 +1,5 @@
 ---
-- name: restart supervisor
+- name: restart supervisorctl
   shell: supervisorctl restart {{ app }}
 
 - name: restart supervisor
