--- a/code/roles/uwsgi/tasks/main.yml
+++ b/code/roles/uwsgi/tasks/main.yml
@@ -10,11 +10,11 @@
   template: src={{ item.name }}
             dest={{ item.dest }}
   with_items:
-    - { name: footy.xml, dest: /etc/uwsgi/apps-available/ }
+    - { name: footy.ini, dest: /etc/uwsgi/apps-available/ }
     - { name: uwsgi-emperor.conf, dest: /etc/init/ }
 
 - name: Enable footy
-  file: src=/etc/uwsgi/apps-available/footy.xml
-        dest=/etc/uwsgi/apps-enabled/footy.xml
+  file: src=/etc/uwsgi/apps-available/footy.ini
+        dest=/etc/uwsgi/apps-enabled/footy.ini
         state=link
   notify: restart uwsgi
